kube/kind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
  rules:
  - http:
      paths:
      - path: /orbeon
        pathType: Prefix
        backend:
          service:
            name: orbeon-tomcat
            port:
              number: 8080
